# BoostForAndroidSimpleExample

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/devyh/boostforandroidexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/devyh/boostforandroidexample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/devyh/boostforandroidexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
